maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: (Int, Int) does not take parameters
  setIndication(sortie(0), sortie(1), 0)
                      ^JediEscaper:12: error: (Int, Int) does not take parameters
  setIndication(sortie(0), sortie(1), 0)
                                 ^JediEscaper:15: error: not enough arguments for method traiterLaCase: (i: Int, hauteur: Int, largeur: Int)Unit.
Unspecified value parameters hauteur, largeur.
      traiterLaCase(0)
                   ^JediEscaper:26: error: not found: value estSurBuggle
  while (!estSurBuggle()){
          ^JediEscaper:27: error: not found: value void
    void setDirection(Direction.NORD)
    ^JediEscaper:29: error: not found: value x
      if (getIndication(x, y - 1)== nb - 1){avance()}
                        ^JediEscaper:29: error: not found: value y
      if (getIndication(x, y - 1)== nb - 1){avance()}
                           ^JediEscaper:31: error: not found: value void
      void setDirection(Direction.OUEST)
      ^JediEscaper:33: error: not found: value x
      		if (getIndication(x - 1, y)== nb - 1){avance()}
                                  ^JediEscaper:33: error: not found: value y
      		if (getIndication(x - 1, y)== nb - 1){avance()}
                                         ^JediEscaper:35: error: not found: value void
          void setDirection(Direction.EST)
          ^JediEscaper:37: error: not found: value x
      				if (getIndication(x + 1, y)== nb - 1){avance()}
                                                  ^JediEscaper:37: error: not found: value y
      				if (getIndication(x + 1, y)== nb - 1){avance()}
                                                         ^JediEscaper:39: error: not found: value void
              void setDirection(Direction.SUD)
              ^JediEscaper:41: error: not found: value x
      						if (getIndication(x, y + 1)== nb - 1){avance()}
                                                                  ^JediEscaper:41: error: not found: value y
      						if (getIndication(x, y + 1)== nb - 1){avance()}
                                                                     ^JediEscaper:52: error: not found: value i
      if (aBiscuit(i,j)){return (x,y)}
                   ^JediEscaper:52: error: not found: value j
      if (aBiscuit(i,j)){return (x,y)}
                     ^JediEscaper:50: error: type mismatch;
 found   : Unit
 required: (Int, Int)
  for (x <- 0 to largeur - 1){
         ^